@@ -118,6 +118,21 @@ test source-2.6 {source error conditions} -setup {
 	{couldn't read file "*_non_existent_": no such file or directory} \
 	{POSIX ENOENT {no such file or directory}}]
 
+test source-2.7 {utf-8 with BOM} -setup {
+    set sourcefile [makeFile {} source.file]
+    set saveencoding [encoding system]
+    encoding system utf-8
+    set out [open $sourcefile w]
+    puts $out "\ufffeset y new-y"
+    close $out
+} -body {
+   set y old-y
+    source $sourcefile
+    set y
+} -cleanup {
+    removeFile source.file
+    encoding system $saveencoding
+} -result {new-y}
 
 test source-3.1 {return in middle of source file} -setup {
     set sourcefile [makeFile {
